# intervals

./: Cargo.toml  README.md
examples/: test.rs
src/: lib.rs
src/bounds/: closed.rs  mixed.rs  mod.rs  no_bound.rs  open.rs
src/partitions/: declarative.rs  mod.rs  uniform.rs
tests/: intersection.rs  union_closure.rs
